--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.6
+  flutter_svg: ^2.0.7
   go_router: ^9.0.3
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
