--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   flutter_svg: ^2.0.7
   go_router: ^9.0.3
+  intl: ^0.18.1
   shared_preferences: ^2.2.0
 
 dev_dependencies:
