add home_page, home_header and category_item

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/category_icons/
     - assets/onboarding/
     - assets/icons/
   uses-material-design: true
