add navbar, add logic for unfocusing textfields

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/navbar_icons/
     - assets/class_images/
     - assets/course_icons/
     - assets/category_icons/
