--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.3.6
   flutter_svg: ^2.0.7
+  flutter_svg_provider: ^1.0.4
   go_router: ^9.0.3
   intl: ^0.18.1
   shared_preferences: ^2.2.0
@@ -23,6 +24,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/mentor_social_media_icons/
     - assets/navbar_icons/
     - assets/class_images/
     - assets/course_icons/
